force-app/main/default/objects/Project_Comments__c/Project_Comments__c.object-meta.xml
<CustomObject>
    <description>This is custom object to store Project comments.</description>
    <label>Project Comment</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Project Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Comments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>