force-app/main/default/objects/Project_Comments__c/fields/Clause_Subclause__c.field-meta.xml
<CustomField>
    <fullName>Clause_Subclause__c</fullName>
    <label>Clause Subclause</label>
    <length>50</length>
    <type>Text</type>
</CustomField>