force-app/main/default/objects/Project_Comments__c/fields/Comment_No__c.field-meta.xml
<CustomField>
    <fullName>Comment_No__c</fullName>
    <label>Comment No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>