force-app/main/default/objects/Project_Comments__c/fields/Paragraph_Figure_Table__c.field-meta.xml
<CustomField>
    <fullName>Paragraph_Figure_Table__c</fullName>
    <label>Paragraph_Figure_Table</label>
    <type>TextArea</type>
</CustomField>