force-app/main/default/objects/Project_Comments__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>inspire1__Project__c</referenceTo>
    <relationshipLabel>Project Comments</relationshipLabel>
    <relationshipName>Project_Comments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>