force-app/main/default/objects/Project_Comments__c/fields/Proposed_change_Rresolution__c.field-meta.xml
<CustomField>
    <fullName>Proposed_change_Rresolution__c</fullName>
    <label>Proposed change Resolution</label>
    <type>TextArea</type>
</CustomField>