force-app/main/default/objects/Project_Comments__c/fields/Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stakeholder</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Comments</relationshipLabel>
    <relationshipName>Project_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>