force-app/main/default/objects/Project_Comments__c/fields/Type_of_comment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_comment__c</fullName>
    <label>Type of comment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <label>GE</label>
            </value>
            <value>
                <fullName>Technical</fullName>
                <label>TE</label>
            </value>
            <value>
                <fullName>editorial</fullName>
                <label>ED</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>