force-app/main/default/objects/Project_Comments__c/recordTypes/SCS_Standard.recordType-meta.xml
<RecordType>
    <fullName>SCS_Standard</fullName>
    <active>true</active>
    <label>SCS Standard</label>
</RecordType>